[tool.poetry]
name = "test_driven_development"
version = "0.1.0"
description = ""
authors = ["mokamoto-ri <mokamoto@ridge-i.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
